@startuml banking

skin rose

title Digi'bank - Class Diagram


class Account {
  - id: string
  - number: string
  - user: string
  - balance: number
  - overdraftFacility: number
  + Account()
}

class User {
  - id: string
  - identifier: string
  - password: string
  - firstName: string
  - lastName: string
  + User()
}

class Operation {
  - id: string
  - amount: number
  - account: string
  - date: Date
  - label: string
  + Operation()
}

class Role {
  - id: string
  - role: string
  + Role()
}

class OperationType {
  - id: string
  - type: string
  + OperationType()
}

class FlowIndicator {
  - id: string
  - indicator: string
  + FlowIndicator()
}

User "0.*" o-- "1" Role
Operation "0.*" o-- "1" Account
Operation "0.*" o-- "1" OperationType
Operation "0.*" o-- "1" FlowIndicator
Account "0.*" o-- "1" User

@enduml